--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 h1 {
@@ -47,7 +47,7 @@ h1 {
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
 }
 
 @media (prefers-color-scheme: light) {
