--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,25 @@ h1 {
   height: 100dvh;
 }
 
+.v-application {
+  font-family: 'NanumBarunGothic', sans-serif !important;
+}
+@font-face {
+  font-family:'NanumBarunGothic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothic.ttf') format('truetype');
+  font-weight: 400;
+}
+@font-face {
+  font-family:'NanumBarunGothic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothicLight.ttf') format('truetype');
+  font-weight: 300;
+}
+@font-face {
+  font-family:'NanumBarunGothic';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothicBold.ttf') format('truetype');
+  font-weight: 700;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
