--- a/src/style.css
+++ b/src/style.css
@@ -55,18 +55,8 @@ h1 {
 }
 @font-face {
   font-family:'NanumBarunGothic';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothic.ttf') format('truetype');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('truetype');
   font-weight: 400;
-}
-@font-face {
-  font-family:'NanumBarunGothic';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothicLight.ttf') format('truetype');
-  font-weight: 300;
-}
-@font-face {
-  font-family:'NanumBarunGothic';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1//NanumBarunGothicBold.ttf') format('truetype');
-  font-weight: 700;
 }
 
 @media (prefers-color-scheme: light) {
