--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ h1 {
 }
 @font-face {
   font-family:'GmarketSansBold';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('truetype');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSans.woff') format('truetype');
   font-weight: 400;
 }
 
